--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,20 @@
+:root {
+  --block-text-color: #55555;
+
+--block-background-color : #55555;
+
+--block-accent-color : #55555;
+
+--block-shadow-color : #55555;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
 }
 
 a {
